posts and homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
    </ul>
 
    <p>
-      <a class="btn btn-sm btn-secondary" href="/users/new">Add user</a>
+      <a class="btn btn-sm btn-secondary" href="/users/new">Add User</a>
    </p>
 </body>
 
