--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -9,21 +9,37 @@
 </head>
 
 <body>
-   <h1>{{ user.full_name }}</h1>
 
-   <div>
-      <!-- {% if user.image_url %} -->
-      <img src="{{ user.image_url }}" alt="{{ user.full_name }}">
-      <!-- {% endif %} -->
-   </div>
 
-   <div>
-      <form>
-         <button class="btn btn-primary btn-sm" formaction="/users/{{ user.id }}/edit" formmethod="GET">Edit</button>
+   <div class="row">
+      <div class="col-sm-2 col-6">
+         {% if user.image_url %}
+         <img src="{{ user.image_url }}" alt="{{ user.full_name }}">
+         {% endif %}
+      </div>
 
-         <button class="btn btn-danger btn-sm" formaction="/users/{{ user.id }}/delete"
-            formmethod="POST">Delete</button>
-      </form>
+      <div class="col-sm-10 col-12">
+         <h1>{{ user.full_name }}</h1>
+         <form>
+            <button class="btn btn-primary btn-sm" formaction="/users/{{ user.id }}/edit" formmethod="GET">Edit</button>
+
+            <button class="btn btn-danger btn-sm" formaction="/users/{{ user.id }}/delete"
+               formmethod="POST">Delete</button>
+         </form>
+
+         <h2 class="col-sm-10 col-12">Posts</h2>
+
+         <ul>
+            {% for post in user.posts %}
+            <li>
+               <a href="/posts/{{ post.id }}">{{ post.title }}</a>
+               <small>{{ post.created_at }}</small>
+            </li>
+            {% endfor %}
+         </ul>
+
+         <p><a href="/users/{{ user.id }}/posts/new" class="btn btn-primary">Add Post</a></p>
+      </div>
    </div>
 
 </body>
