--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,6 +22,10 @@
       <small>by {{ post.user.full_name }} on {{ post.created_at }}</small>
    </p>
    {% endfor %}
+
+   <p>
+      <a href="/users">View Users</a>
+   </p>
 </body>
 
 </html>
