--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,9 @@
    <p>
       <a class="btn btn-sm btn-secondary" href="/users/new">Add User</a>
    </p>
+   <p>
+      <a href="/" class="btn btn-primary">Blogly Feed</a>
+   </p>
 </body>
 
 </html>
