--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -38,7 +38,13 @@
             {% endfor %}
          </ul>
 
-         <p><a href="/users/{{ user.id }}/posts/new" class="btn btn-primary">Add Post</a></p>
+         <p>
+            <a href="/users/{{ user.id }}/posts/new" class="btn btn-primary">Add Post</a>
+         </p>
+         <p>
+            <a href="/" class="btn btn-primary">Blogly Feed</a>
+         </p>
+
       </div>
    </div>
 
