order most recent posts on feed

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,7 +19,7 @@
       {{ post.content }}
    </p>
    <p>
-      <small>by {{ post.user.full_name }} on {{ post.created_at }}</small>
+      <small>by {{ post.user.full_name }} on {{ post.friendly_date }}</small>
    </p>
    {% endfor %}
 
