--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -33,7 +33,7 @@
             {% for post in user.posts %}
             <li>
                <a href="/posts/{{ post.id }}">{{ post.title }}</a>
-               <small>{{ post.created_at }}</small>
+               <small>{{ post.friendly_date }}</small>
             </li>
             {% endfor %}
          </ul>
