--- a/templates/postshow.html
+++ b/templates/postshow.html
@@ -13,7 +13,7 @@
 
    <p>{{ post.content }}</p>
    <p><i>By {{ post.user.full_name }}
-         on {{ post.created_at }}
+         on {{ post.friendly_date }}
       </i></p>
 
    <form>
