--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+   <p>
+      <a href="/users">View Users</a>
+   </p>
+
    <h1>Blogly Posts</h1>
 
    {% for post in posts %}
@@ -21,11 +25,19 @@
    <p>
       <small>by {{ post.user.full_name }} on {{ post.friendly_date }}</small>
    </p>
+   {% if post.tags %}
+   <p>
+      <b>Tags:</b>
+      {% for tag in post.tags %}
+      <a href="/tags/{{ tag.id }}"><i class="badge badge-primary">{{ tag.name }}</i></a>
+      {% endfor %}
+   </p>
+   {% endif %}
    {% endfor %}
 
-   <p>
-      <a href="/users">View Users</a>
-   </p>
+
+
+
 </body>
 
 </html>
